Refactor `erupt-designer` for enhanced clarity and performance:
- Simplified conditional logic in `DesignerDataService` using enhanced `switch`.
- Unified validation messages and checks in `DesignerEntityDataProxy`.
- Standardized naming and localization within `DesignerEntity` model and annotations.
- Replaced string-based enums and types with JavaPoet-backed dynamic logic in `EruptCodeService`.
- Improved test cases for maintainability and alignment with domain classes using `LambdaSee`.