@@ -3,25 +3,35 @@ package xyz.erupt.designer.service;
 import com.google.gson.JsonArray;
 import com.google.gson.JsonElement;
 import com.google.gson.JsonObject;
+import com.palantir.javapoet.*;
+import jakarta.persistence.*;
+import lombok.Getter;
+import lombok.Setter;
 import org.springframework.stereotype.Service;
 import xyz.erupt.annotation.Erupt;
+import xyz.erupt.annotation.EruptField;
 import xyz.erupt.annotation.sub_field.Edit;
 import xyz.erupt.annotation.sub_field.EditType;
 import xyz.erupt.annotation.sub_field.View;
 import xyz.erupt.core.exception.EruptWebApiRuntimeException;
-import xyz.erupt.designer.model.DesignerForm;
+import xyz.erupt.designer.pojo.DesignerForm;
+import xyz.erupt.linq.lambda.LambdaSee;
 
+import javax.lang.model.element.Modifier;
 import java.lang.annotation.Annotation;
 import java.lang.reflect.Array;
 import java.lang.reflect.Method;
+import java.math.BigDecimal;
 import java.util.*;
 import java.util.regex.Pattern;
 
 /**
  * Convert designer json (mirroring erupt annotation structure) to entity source code.
  * <p>
- * Annotation members are rendered generically by reflection: only values that differ from
- * the annotation member defaults are emitted, so the generated code stays minimal.
+ * Structure, imports, escaping and indentation are delegated to JavaPoet; this class only owns the
+ * domain logic JavaPoet can't know: which annotation members to emit (only values that differ from
+ * the member default, so the generated code stays minimal) and how each designer field maps to a
+ * java type and ORM annotations.
  *
  * @author YuePeng
  * date 2026-06-12
@@ -38,187 +48,158 @@ public class EruptCodeService {
         if (null == form.getClassName() || !IDENTIFIER.matcher(form.getClassName()).matches()) {
             throw new EruptWebApiRuntimeException("Invalid class name: " + form.getClassName());
         }
-        Set<String> imports = new LinkedHashSet<>(Arrays.asList(
-                "xyz.erupt.annotation.*",
-                "xyz.erupt.annotation.sub_erupt.*",
-                "xyz.erupt.annotation.sub_field.*",
-                "xyz.erupt.annotation.sub_field.sub_edit.*",
-                "jakarta.persistence.*",
-                "lombok.Getter",
-                "lombok.Setter"
-        ));
-        StringBuilder body = new StringBuilder();
-        for (DesignerForm.DesignerField field : Optional.ofNullable(form.getFields()).orElse(new ArrayList<>())) {
-            body.append(this.fieldCode(form, field, imports));
-        }
-        StringBuilder code = new StringBuilder();
-        if (null != form.getPkg() && !form.getPkg().isEmpty()) {
-            code.append("package ").append(form.getPkg()).append(";\n\n");
-        }
-        String extendsModel = Optional.ofNullable(form.getExtendsModel()).orElse("");
-        if (!extendsModel.isEmpty()) imports.add("xyz.erupt.jpa.model." + extendsModel);
-        imports.forEach(it -> code.append("import ").append(it).append(";\n"));
-        code.append("\n");
+        String eruptName = LambdaSee.method(Erupt::name);
         JsonObject eruptJson = Optional.ofNullable(form.getErupt()).orElse(new JsonObject());
-        if (!eruptJson.has("name")) eruptJson.addProperty("name", form.getClassName());
-        code.append(annotationCode(Erupt.class, eruptJson, 0)).append("\n");
-        code.append("@Table(name = \"").append(Optional.ofNullable(form.getTableName())
-                .filter(it -> !it.isEmpty()).orElse(camelToUnderline(form.getClassName()))).append("\")\n");
-        code.append("@Entity\n@Getter\n@Setter\n");
-        code.append("public class ").append(form.getClassName());
-        if (!extendsModel.isEmpty()) code.append(" extends ").append(extendsModel);
-        code.append(" {\n").append(body).append("\n}");
-        return code.toString();
+        if (!eruptJson.has(eruptName)) eruptJson.addProperty(eruptName, form.getClassName());
+        String tableName = Optional.ofNullable(form.getTableName())
+                .filter(it -> !it.isEmpty()).orElse(camelToUnderline(form.getClassName()));
+        TypeSpec.Builder type = TypeSpec.classBuilder(form.getClassName())
+                .addModifiers(Modifier.PUBLIC)
+                .addAnnotation(annotationSpec(Erupt.class, eruptJson))
+                .addAnnotation(AnnotationSpec.builder(Table.class).addMember(LambdaSee.method(Table::name), "$S", tableName).build())
+                .addAnnotation(Entity.class)
+                .addAnnotation(Getter.class)
+                .addAnnotation(Setter.class);
+        String extendsModel = Optional.ofNullable(form.getExtendsModel()).orElse("");
+        if (!extendsModel.isEmpty()) type.superclass(ClassName.get("xyz.erupt.jpa.model", extendsModel));
+        for (DesignerForm.DesignerField field : Optional.ofNullable(form.getFields()).orElse(new ArrayList<>())) {
+            type.addField(fieldSpec(form, field));
+        }
+        return JavaFile.builder(Optional.ofNullable(form.getPkg()).orElse(""), type.build())
+                .indent("    ").skipJavaLangImports(true).build().toString();
     }
 
-    private String fieldCode(DesignerForm form, DesignerForm.DesignerField field, Set<String> imports) {
+    private FieldSpec fieldSpec(DesignerForm form, DesignerForm.DesignerField field) {
         if (null == field.getFieldName() || !IDENTIFIER.matcher(field.getFieldName()).matches()) {
             throw new EruptWebApiRuntimeException("Invalid field name: " + field.getFieldName());
         }
+        String editTypeMember = LambdaSee.method(Edit::type);
         EditType editType = Optional.ofNullable(field.getEdit())
-                .filter(it -> it.has("type"))
-                .map(it -> EditType.valueOf(it.get("type").getAsString())).orElse(EditType.INPUT);
-        StringBuilder sb = new StringBuilder("\n    @EruptField(\n");
-        List<String> parts = new ArrayList<>();
-        if (null != field.getView()) parts.add("            views = " + annotationCode(View.class, field.getView(), 3));
-        if (null != field.getEdit()) parts.add("            edit = " + annotationCode(Edit.class, field.getEdit(), 3));
-        sb.append(String.join(",\n", parts)).append("\n    )\n");
-        for (String orm : this.ormAnnotations(form, field, editType)) {
-            sb.append("    ").append(orm).append("\n");
+                .filter(it -> it.has(editTypeMember))
+                .map(it -> EditType.valueOf(it.get(editTypeMember).getAsString())).orElse(EditType.INPUT);
+        AnnotationSpec.Builder eruptField = AnnotationSpec.builder(EruptField.class);
+        if (null != field.getView())
+            eruptField.addMember(LambdaSee.method(EruptField::views), "$L", annotationSpec(View.class, field.getView()));
+        if (null != field.getEdit())
+            eruptField.addMember(LambdaSee.method(EruptField::edit), "$L", annotationSpec(Edit.class, field.getEdit()));
+        FieldSpec.Builder fieldSpec = FieldSpec.builder(fieldType(field, editType), field.getFieldName(), Modifier.PRIVATE)
+                .addAnnotation(eruptField.build());
+        for (AnnotationSpec orm : ormAnnotations(form, field, editType)) {
+            fieldSpec.addAnnotation(orm);
         }
-        sb.append("    private ").append(this.javaType(field, editType, imports)).append(" ").append(field.getFieldName()).append(";\n");
-        return sb.toString();
+        return fieldSpec.build();
     }
 
-    private String javaType(DesignerForm.DesignerField field, EditType editType, Set<String> imports) {
+    private TypeName fieldType(DesignerForm.DesignerField field, EditType editType) {
         if (null != field.getFieldType() && !field.getFieldType().isEmpty()) {
-            if ("BigDecimal".equals(field.getFieldType())) imports.add("java.math.BigDecimal");
-            return field.getFieldType();
+            return BigDecimal.class.getSimpleName().equals(field.getFieldType())
+                    ? ClassName.get(BigDecimal.class) : ClassName.bestGuess(field.getFieldType());
         }
-        switch (editType) {
-            case NUMBER:
-            case SLIDER:
-            case RATE:
-                return "Integer";
-            case BOOLEAN:
-                return "Boolean";
-            case DATE:
-                imports.add("java.util.Date");
-                return "Date";
-            case REFERENCE_TREE:
-            case REFERENCE_TABLE:
-            case COMBINE:
-                return this.linkErupt(field);
-            case CHECKBOX:
-            case TAB_TREE:
-            case TAB_TABLE_REFER:
-            case TAB_TABLE_ADD:
-                imports.add("java.util.Set");
-                return "Set<" + this.linkErupt(field) + ">";
-            default:
-                return "String";
-        }
+        return switch (editType) {
+            case NUMBER, SLIDER, RATE -> ClassName.get(Integer.class);
+            case BOOLEAN -> ClassName.get(Boolean.class);
+            case DATE -> ClassName.get(Date.class);
+            case REFERENCE_TREE, REFERENCE_TABLE, COMBINE -> linkErupt(field);
+            case CHECKBOX, TAB_TREE, TAB_TABLE_REFER, TAB_TABLE_ADD ->
+                    ParameterizedTypeName.get(ClassName.get(Set.class), linkErupt(field));
+            default -> ClassName.get(String.class);
+        };
     }
 
-    private List<String> ormAnnotations(DesignerForm form, DesignerForm.DesignerField field, EditType editType) {
-        switch (editType) {
-            case REFERENCE_TREE:
-            case REFERENCE_TABLE:
-                return Arrays.asList("@ManyToOne", "@JoinColumn(name = \"" + camelToUnderline(field.getFieldName()) + "_id\")");
-            case COMBINE:
-                return Arrays.asList("@OneToOne(cascade = CascadeType.ALL)", "@JoinColumn(name = \"" + camelToUnderline(field.getFieldName()) + "_id\")");
-            case CHECKBOX:
-            case TAB_TREE:
-            case TAB_TABLE_REFER:
-                return List.of("@ManyToMany");
-            case TAB_TABLE_ADD:
-                return Arrays.asList("@OneToMany(cascade = CascadeType.ALL, orphanRemoval = true)",
-                        "@JoinColumn(name = \"" + camelToUnderline(form.getClassName()) + "_id\")");
-            case HTML_EDITOR:
-            case CODE_EDITOR:
-            case MARKDOWN:
-                return List.of("@Lob");
-            case DIVIDE:
-            case EMPTY:
-            case GROUP:
-                return List.of("@Transient");
-            default:
-                return List.of();
-        }
+    private List<AnnotationSpec> ormAnnotations(DesignerForm form, DesignerForm.DesignerField field, EditType editType) {
+        return switch (editType) {
+            case REFERENCE_TREE, REFERENCE_TABLE ->
+                    Arrays.asList(annotation(ManyToOne.class), joinColumn(field.getFieldName()));
+            case COMBINE -> Arrays.asList(AnnotationSpec.builder(OneToOne.class)
+                            .addMember(LambdaSee.method(OneToOne::cascade), "$T.$L", CascadeType.class, CascadeType.ALL.name()).build(),
+                    joinColumn(field.getFieldName()));
+            case CHECKBOX, TAB_TREE, TAB_TABLE_REFER -> List.of(annotation(ManyToMany.class));
+            case TAB_TABLE_ADD -> Arrays.asList(AnnotationSpec.builder(OneToMany.class)
+                            .addMember(LambdaSee.method(OneToMany::cascade), "$T.$L", CascadeType.class, CascadeType.ALL.name())
+                            .addMember(LambdaSee.method(OneToMany::orphanRemoval), "$L", true).build(),
+                    joinColumn(form.getClassName()));
+            case HTML_EDITOR, CODE_EDITOR, MARKDOWN -> List.of(annotation(Lob.class));
+            case DIVIDE, EMPTY, GROUP -> List.of(annotation(Transient.class));
+            default -> List.of();
+        };
     }
 
-    private String linkErupt(DesignerForm.DesignerField field) {
+    private static AnnotationSpec annotation(Class<? extends Annotation> type) {
+        return AnnotationSpec.builder(type).build();
+    }
+
+    private static AnnotationSpec joinColumn(String name) {
+        return AnnotationSpec.builder(JoinColumn.class)
+                .addMember(LambdaSee.method(JoinColumn::name), "$S", camelToUnderline(name) + "_id").build();
+    }
+
+    private TypeName linkErupt(DesignerForm.DesignerField field) {
         if (null == field.getLinkErupt() || !IDENTIFIER.matcher(field.getLinkErupt()).matches()) {
             throw new EruptWebApiRuntimeException("Field '" + field.getFieldName() + "' requires a linked erupt class");
         }
-        return field.getLinkErupt();
+        return ClassName.get("", field.getLinkErupt());
     }
 
-    // Render an annotation generically: emit only members whose json value differs from the member default
-    public String annotationCode(Class<? extends Annotation> type, JsonObject json, int indentLevel) {
-        List<String> parts = new ArrayList<>();
+    // Build an annotation generically: emit only members whose json value differs from the member default
+    private AnnotationSpec annotationSpec(Class<? extends Annotation> type, JsonObject json) {
+        AnnotationSpec.Builder builder = AnnotationSpec.builder(type);
         Method[] methods = type.getDeclaredMethods();
         Arrays.sort(methods, Comparator.comparingInt(this::memberOrder).thenComparing(Method::getName));
         for (Method method : methods) {
             JsonElement je = json.get(method.getName());
             if (null == je || je.isJsonNull()) continue;
-            String value = this.memberValue(method.getReturnType(), je, method.getDefaultValue(), indentLevel);
-            if (null != value) parts.add(method.getName() + " = " + value);
+            CodeBlock value = memberValue(method.getReturnType(), je, method.getDefaultValue());
+            if (null != value) builder.addMember(method.getName(), value);
         }
-        if (parts.isEmpty()) return "@" + type.getSimpleName();
-        String joined = String.join(", ", parts);
-        if (joined.length() > 90) {
-            String indent = "    ".repeat(indentLevel + 1);
-            joined = "\n" + indent + String.join(",\n" + indent, parts) + "\n" + "    ".repeat(indentLevel);
-        }
-        return "@" + type.getSimpleName() + "(" + joined + ")";
+        return builder.build();
     }
 
     // returns null when the value equals the member default (no need to emit)
     @SuppressWarnings("unchecked")
-    private String memberValue(Class<?> rt, JsonElement je, Object def, int indentLevel) {
+    private CodeBlock memberValue(Class<?> rt, JsonElement je, Object def) {
         if (Class.class.isAssignableFrom(rt)) return null;
         if (rt.isArray()) {
             if (!je.isJsonArray()) return null;
             JsonArray arr = je.getAsJsonArray();
             if (arr.isEmpty()) return null;
-            List<String> items = new ArrayList<>();
+            List<CodeBlock> items = new ArrayList<>();
             for (JsonElement item : arr) {
-                items.add(this.memberValue(rt.getComponentType(), item, null, indentLevel));
+                items.add(this.memberValue(rt.getComponentType(), item, null));
             }
-            return items.size() == 1 ? items.get(0) : "{" + String.join(", ", items) + "}";
+            return items.size() == 1 ? items.get(0) : CodeBlock.of("{$L}", CodeBlock.join(items, ", "));
         }
         if (rt.isAnnotation()) {
             if (!je.isJsonObject()) return null;
             Class<? extends Annotation> at = (Class<? extends Annotation>) rt;
-            if (def instanceof Annotation && this.sameAsDefault(at, je.getAsJsonObject(), (Annotation) def)) return null;
-            return this.annotationCode(at, je.getAsJsonObject(), indentLevel + 1);
+            if (def instanceof Annotation && this.sameAsDefault(at, je.getAsJsonObject(), (Annotation) def))
+                return null;
+            return CodeBlock.of("$L", this.annotationSpec(at, je.getAsJsonObject()));
         }
         if (rt.isEnum()) {
             String name = je.getAsString();
             if (def instanceof Enum && ((Enum<?>) def).name().equals(name)) return null;
-            return this.enumRef(rt) + "." + name;
+            return CodeBlock.of("$T.$L", rt, name);
         }
         if (rt == String.class) {
             String value = je.getAsString();
             if (value.equals(def)) return null;
-            return "\"" + value.replace("\\", "\\\\").replace("\"", "\\\"") + "\"";
+            return CodeBlock.of("$S", value);
         }
         if (rt == boolean.class) {
             boolean value = je.getAsBoolean();
             if (def instanceof Boolean && (Boolean) def == value) return null;
-            return String.valueOf(value);
+            return CodeBlock.of("$L", value);
         }
         if (rt == float.class || rt == double.class) {
             double value = je.getAsDouble();
             if (def instanceof Number && ((Number) def).doubleValue() == value) return null;
             String str = value == Math.floor(value) ? String.valueOf((long) value) : String.valueOf(value);
-            return rt == float.class ? str + "f" : str;
+            return CodeBlock.of("$L", rt == float.class ? str + "f" : str);
         }
         // int / long
         long value = je.getAsLong();
         if (def instanceof Number && ((Number) def).longValue() == value) return null;
-        return (value > Integer.MAX_VALUE || value < Integer.MIN_VALUE) ? value + "L" : String.valueOf(value);
+        return CodeBlock.of("$L", (value > Integer.MAX_VALUE || value < Integer.MIN_VALUE) ? value + "L" : String.valueOf(value));
     }
 
     // whether the json effective values equal the default annotation instance held by the parent member
@@ -229,7 +210,8 @@ public class EruptCodeService {
                 JsonElement je = json.get(method.getName());
                 Object defValue = method.invoke(def);
                 if (null == je || je.isJsonNull()) {
-                    if (null != method.getDefaultValue() && !deepEquals(method.getDefaultValue(), defValue)) return false;
+                    if (null != method.getDefaultValue() && !deepEquals(method.getDefaultValue(), defValue))
+                        return false;
                     continue;
                 }
                 Class<?> rt = method.getReturnType();
@@ -261,17 +243,6 @@ public class EruptCodeService {
     private static boolean deepEquals(Object a, Object b) {
         if (a != null && a.getClass().isArray()) return Array.getLength(a) == Array.getLength(b);
         return java.util.Objects.equals(a, b);
-    }
-
-    // nested enum reference, e.g. DateType.Type / EditType
-    private String enumRef(Class<?> enumType) {
-        StringBuilder name = new StringBuilder(enumType.getSimpleName());
-        Class<?> enclosing = enumType.getEnclosingClass();
-        while (null != enclosing) {
-            name.insert(0, enclosing.getSimpleName() + ".");
-            enclosing = enclosing.getEnclosingClass();
-        }
-        return name.toString();
     }
 
     private int memberOrder(Method method) {
